feat: novas funcionalidades do site